--- a/Vacunaciones/index.html
+++ b/Vacunaciones/index.html
@@ -234,6 +234,64 @@
                 <img src="./Images/boy.png">
             </div>
         </div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="foot-menu">
+            <div class="slogan">
+                <h3>Vaccination</h3>
+                <p>Our goal is to hep to help the world free from the ongoing pandemic</p>
+            </div>
+            <div class="about">
+                <h4>About</h4>
+                <ul>
+                    <li>
+                        <a href="#">About us</a>
+                    </li>
+                    <li>
+                        <a href="#">Features</a>
+                    </li>
+                    <li>
+                        <a href="#">New & Blog</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="company">
+                <h4>Company</h4>
+                <ul>
+                    <li>
+                        <a href="#">How We Work?</a>
+                    </li>
+                    <li>
+                        <a href="#">Capital</a>
+                    </li>
+                    <li>
+                        <a href="#">Security</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="support">
+                <h4>Support</h4>
+                <ul>
+                    <li>
+                        <a href="#">FAQs</a>
+                    </li>
+                    <li>
+                        <a href="#">Support Center</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="reserved">
+            @2021 Vaccination. All rights reserved
+        </div>
+        <div class="legal">
+            <span>Terms & Agreements</span>
+            <span>Privacy Policy</span>
+        </div>
+    </footer>
     <!-- Scripts Js FontAwesome -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
 </body>
