changes: ajustando margenes del form

--- a/Vacunaciones/index.html
+++ b/Vacunaciones/index.html
@@ -117,22 +117,22 @@
     <div class="container cards">
             <div class="center">
                 <div class="card">
-                    <span><i class="fa-solid fa-sliders blueicon-md"></i></span>
+                    <span><i class="fa-solid fa-sliders blueicon-lg"></i></span>
                     <h4>Minimize the spread of viruses</h4>
                     <p>Vaccine has been proven effective to prevent someone from getting infected with Coronavirus</p>
                 </div>
                 <div class="card">
-                    <span><i class="fa-solid fa-shield-blank blueicon-md"></i></span>
+                    <span><i class="fa-solid fa-shield-blank blueicon-lg"></i></span>
                     <h4>Forming antibodies</h4>
                     <p>COVID-19 vaccine proven to help shape antibody response for immune system</p>
                 </div>
                 <div class="card">
-                    <span><i class="fa-solid fa-users blueicon-md"></i></span>
+                    <span><i class="fa-solid fa-users blueicon-lg"></i></span>
                     <h4>Protecting people nearby</h4>
                     <p>The benefits of COVID-19 vaccination are the vaccine tha we get also help protect people around us</p>
                 </div>
                 <div class="card">
-                    <span><i class="fa-solid fa-chart-line blueicon-md"></i></span>
+                    <span><i class="fa-solid fa-chart-line blueicon-lg"></i></span>
                     <h4>Creating group immunity</h4>
                     <p>COVID-19 vaccination is also beneficial for creating group immunity or herd immunity</p>
                 </div>
