add: togle data and styles

--- a/Vacunaciones/index.html
+++ b/Vacunaciones/index.html
@@ -149,50 +149,67 @@
                 <p>the success of vaccines is strongly influenced by the strength of the body's immune system.Therefore, there are several things that can be tired to make the COVID-19 vaccine work:</p>
             </div>
             <!-- accordion -->
-            <div class="accordion grid-2">
-                <div class="item-box">
-                    <div class="acord-title">
-                        <span><i class="fa-solid fa-shield-blank blueicon-sm"></i></span>
-                        <h4>Avoid alcoholic beverages</h4>
+            <div class="toggler" id="toggler">
+                <div class="toggler-content">
+                    <div class="item">
+                        <div>
+                            <a>
+                                <h4 class="toggler-title">
+                                    <i class="fa fa-shield-blank blueicon-md"></i> Avoid alcoholic beverages
+                                </h4>
+                            </a>
+                        </div>
+                        <div class="togg-text">
+                            Alcohol is still a toxic substance and it is best to avoid it from a health point of view
+                        </div>
                     </div>
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, pariatur! Perspiciatis, totam minus quae tempora velit impedit, modi amet asperiores</p>
+                    <div class="item">
+                        <div>
+                            <a>
+                                <h4 class="toggler-title">
+                                    <i class="fa-solid fa-rectangle-xmark blueicon-md"></i> Avoid stress
+                                </h4>
+                            </a>
+                        </div>
+                        <div class="togg-text">
+                            Stress has a profound effect on immune work Moreover, prolonged stress can increase cortisol production and oxidative stress in the body
+                        </div>
                     </div>
-                </div>
-                <div class="item-box">
-                    <div class="acord-title">
-                        <span><i class="fa-solid fa-shield-blank blueicon-sm"></i></span>
-                        <h4>Avoid alcoholic beverages</h4>
+                    <div class="item">
+                        <div>
+                            <a>
+                                <h4 class="toggler-title">
+                                    <i class="fa-solid fa-square-poll-vertical blueicon-md"></i> Eat healthy food
+                                </h4>
+                            </a>
+                        </div>
+                        <div class="togg-text">
+                            Diet can influence the body's health, mood and energy level of people, so it is important to eat foods through which the body obtains the nutrients it needs
+                        </div>
                     </div>
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, pariatur! Perspiciatis, totam minus quae tempora velit impedit, modi amet asperiores</p>
+                    <div class="item">
+                        <div>
+                            <a>
+                                <h4 class="toggler-title">
+                                    <i class="fa-solid fa-square-check blueicon-md"></i> Get enough sleep
+                                </h4>
+                            </a>
+                        </div>
+                        <div class="togg-text">
+                            Not getting enough sleep can have negative effects on our physical and mental health.
+                        </div>
                     </div>
-                </div>
-                <div class="item-box">
-                    <div class="acord-title">
-                        <span><i class="fa-solid fa-shield-blank blueicon-sm"></i></span>
-                        <h4>Avoid alcoholic beverages</h4>
-                    </div>
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, pariatur! Perspiciatis, totam minus quae tempora velit impedit, modi amet asperiores</p>
-                    </div>
-                </div>
-                <div class="item-box">
-                    <div class="acord-title">
-                        <span><i class="fa-solid fa-shield-blank blueicon-sm"></i></span>
-                        <h4>Avoid alcoholic beverages</h4>
-                    </div>
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, pariatur! Perspiciatis, totam minus quae tempora velit impedit, modi amet asperiores</p>
-                    </div>
-                </div>
-                <div class="item-box">
-                    <div class="acord-title">
-                        <span><i class="fa-solid fa-shield-blank blueicon-sm"></i></span>
-                        <h4>Avoid alcoholic beverages</h4>
-                    </div>
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, pariatur! Perspiciatis, totam minus quae tempora velit impedit, modi amet asperiores</p>
+                    <div class="item active">
+                        <div>
+                            <a>
+                                <h4 class="toggler-title">
+                                    <i class="fa-solid fa-heart-pulse blueicon-md"></i> Exercise or physical activity
+                                </h4>
+                            </a>
+                        </div>
+                        <div class="togg-text">
+                            The practice of physical exercise has many benefits for everyone's health, both for healthy people and for people who have different chronic diseases
+                        </div>
                     </div>
                 </div>
             </div>
@@ -294,5 +311,6 @@
     </footer>
     <!-- Scripts Js FontAwesome -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
+    <script src="./scripts/scripts.js"></script>
 </body>
 </html>
